style: fix edit-btn align

--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,9 +10,11 @@
     border: solid 1px #fff;
     margin-left: 8px;
     cursor: pointer;
+    align-self: center;
+    justify-self: center;
 }
 
-@media (max-width: 760px) {
+@media (max-width: 520px) {
     .profile__edit-button {
         width: 18px;
         height: 18px;
